Began HTML layout and CSS styling of app

--- a/index.html
+++ b/index.html
@@ -2,15 +2,43 @@
 <html lang="en">
 
     <head>
-        <title>Placeholder test</title>
+        <title>Weather App</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link rel="stylesheet" href="./assets/css/reset.css"/>
         <link rel="stylesheet" href="assets/css/style.css"/>
     </head>
-
     <body>
-       
+<!-- All content of searched city will go in this section-->
+        <div id="weatherCard">
+            <div class="citySearch">
+                <input type="text" class="search-bar"> 
+                <button class="searchBtn Btn"> Search!</button>
+            </div>
+            <div class="weatherStats">
+                <h2 class="city statisticText" >Placeholder City</h2>
+                <h1 class="temperature statisticText"> Placeholder Temp</div>
+                    <div class="tempMin statisticText">Min Value</div>
+                    <div class="tempMax statisticText"> Max Value</div>
+                    <div class="precipitation statisticText"> Placeholder Precipitation</div>
+                <div class="humidity statisticText"> Placeholder Humidity</div>
+            </div>
+        </div>
+
+<!--Either put previously searched cities in weatherCard or perhaps along the left or right side of screen-->
+
+
+
+
+
+
+
+
+
+
+
+
+
     <script src="./assets/js/script.js"> </script>
     </body>
 </html>
